# phillips_hue_gpt

./: app.py  pyproject.toml  readme.md
.res/: prompt.txt  setups.json
marvin_hue/: basics.py  colors.py  controllers.py  utils.py
services/: chats.py  parsers.py  prompts.py  validations_tests.ipynb
web/static/: index.js  styles.css  styles_green.css
web/templates/: index.html
